Added double dash Essence and improved commands.

--- a/src/main/resources/assets/celestemod/lang/en_us.json
+++ b/src/main/resources/assets/celestemod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
     "item.celestemod.dash_essence_item": "Dash Essence",
+    "item.celestemod.double_dash_essence_item": "Double Dash Essence",
     "itemGroup.celesteTab" : "Celeste",
     "key.celestemod.dash" : "Dash"
 }
